[Maven] Add target platform